# Memory-Nexus

./: .dockerignore  .gitignore  CLAUDE.md  Cargo-simple.toml  Cargo.toml  Dockerfile  Dockerfile.optimized  INTEGRATION_MASTER_PLAN.md  LONGMEMEVAL.md  README.md  ROADMAP.md  analysis.md  build.rs  docker-compose.optimized.yml  docker-compose.yml  k8s-deployment.yaml  nexus_blocks_ROADMAP.md  old+nexus_engine.md  run_tests.sh  rust.md  skeleton_pipeline.md  test_optimized_pipeline.sh  test_pipeline_to_preprocessing.sh  test_uuid_chain.sh  z_.md
.github/workflows/: performance.yml
Nexus/: Cargo.toml  Dockerfile  FINAL_STRUCTURE.md  README.md  STRUCTURE.md  docker-compose.yml
_docs/: RUST_OPTIMIZATIONS_USED.md  SKELETON_ADVANTAGES.md  SKELETON_TEST_RESULTS.md
benches/: core_types.rs  intelligent_router.rs  performance_validation.rs  pipeline.rs  vector_ops.rs
build_optimization/: README.md
build_optimization/scripts/: 00-interactive-profile-selector.sh  build_ci.sh  build_dev_fast.sh
crates/database-adapters/: Cargo.toml
crates/database-adapters/src/: error.rs  health.rs  lib.rs  qdrant_adapter.rs  surreal_adapter.rs
crates/sync-engine/: Cargo.toml
crates/sync-engine/src/: error.rs  lib.rs  resilient_sync.rs
docker/: Dockerfile.simple  README-Unified.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  manage.sh  migrate-containers.sh  test-compose.yml
docker/archive/: README-original.md
docs/: 01_CURRENT_PIPELINE.md  02_SEARCH_ENGINE.md  03_CONTEXTMASTER.md  04_DATABASE_ARCHITECTURE.md  98_PERCENT_ACCURACY_SECRET.md  ACCURACY_ASSESSMENT.md  CAPACITY_ANALYSIS.md  CONSOLIDATION_SUMMARY.md  DOCKER_DEPLOYMENT.md  FULL_ARCHITECTURE.md  MEMORY_NEXUS_FILE_STRUCTURE.md  OPTIMIZATION_GAP_ANALYSIS.md  OPTIMIZATION_RESULTS.md  PIPELINE_TEST_RESULTS.md  PROJECT_STRUCTURE.md  README.md  ROADMAP.md  UUID_SYSTEM_COMPLETE.md  dependencies.md  goal.md
monitoring/: prometheus.yml
monitoring/alerts/: performance.yml
nexus-blocks/: Cargo.toml  Dockerfile  PHASE_4_COMPLETE.md  README.md  build.rs  docker-compose.yml  exports.lds
nexus-blocks/benches/: block_benchmarks.rs  lock_free.rs  pipeline_blocks.rs  simd_operations.rs
nexus-blocks/docs/: ISOLATION_TEST_RESULTS.md  PACKAGE_VERIFICATION.md  nexus_blocks_guide.md
nexus-blocks/src/: lib.rs
nexus-blocks/src/blocks/: converters.rs  mod.rs
nexus-blocks/src/blocks/engines/: accuracy_block.rs  intelligence_block.rs  learning_block.rs  mining_block.rs  mod.rs
nexus-blocks/src/blocks/pipeline/: fusion_block.rs  mod.rs  preprocessor_block.rs  router_block.rs  search_block.rs
nexus-blocks/src/blocks/registration/: mod.rs  uuid_block.rs
nexus-blocks/src/blocks/storage/: cache_block.rs  mod.rs  transaction_block.rs  vector_block.rs  wal_block.rs
nexus-blocks/src/core/: allocator.rs  cache.rs  errors.rs  metrics.rs  mod.rs  retry.rs  runtime.rs  simd.rs  traits.rs  types.rs
nexus-blocks/src/supporting_module/: mod.rs
nexus-blocks/src/supporting_module/pipeline/: mod.rs
nexus-blocks/src/supporting_module/pipeline/fusion/: deduplication.rs  fallback_scorer.rs  mod.rs  partial_handler.rs  quality_tracker.rs  scoring.rs  selection.rs  tests.rs
nexus-blocks/src/supporting_module/pipeline/preprocessor/: checkpoint_manager.rs  chunking_strategies.rs  mod.rs  utf8_validator.rs
nexus-blocks/src/supporting_module/pipeline/router/: fallback.rs  mod.rs  simd_analyzer.rs
nexus-blocks/src/supporting_module/pipeline/search/: engine_health.rs  fallback_strategy.rs  mod.rs
nexus-blocks/src/supporting_module/storage/: compression.rs  mod.rs  recovery.rs  tests.rs  validation.rs  write_coalescer.rs
nexus-blocks/tests/: integration_test.rs  integration_tests.rs  simple_test.rs
scripts/: README.md  bolt_optimize.sh  build_optimized.sh  docker_build_optimized.sh  init_databases.sh  performance_monitor.sh  pgo_build.sh  quick_accuracy_check.sh  quick_test.sh  setup_qdrant.sh  test_accuracy.rs  test_embeddings.sh  test_optimizations.sh
src/: lib.rs  main.rs  simple_main.rs
src/ai/: embedding_service.rs  local_engine.rs  mod.rs  ollama_client.rs
src/api/: middleware.rs  mod.rs  routes.rs
src/cache/: async_wrapper.rs  cache_coordination.rs  cache_warming.rs  factory.rs  integration.rs  intelligent_cache.rs  mod.rs  moka_cache.rs  moka_comprehensive_tests.rs  multi_level_cache.rs  semantic_similarity.rs  simple_stub.rs  unified_cache_config.rs  vector_hash.rs  wtiny_lfu.rs
src/config/: mod.rs
src/core/: aligned_alloc.rs  binary_embeddings.rs  config.rs  enhanced_uuid_system.rs  error.rs  hash_utils.rs  lock_free_cache.rs  mod.rs  simd_ops.rs  types.rs  uuid_types.rs  zero_copy.rs
src/database/: connection_pool.rs  database_connections.rs  enhanced_pool.rs  mod.rs  qdrant_setup.rs  surrealdb_schema.surql  surrealdb_schema_FIXED.surql
src/database_adapters/: direct_access_errors.rs  hnsw_config.rs  mod.rs  universal_memory_id.rs
src/engines/: accuracy.rs  intelligence.rs  learning.rs  mining.rs  mod.rs
src/errors/: mod.rs
src/health/: mod.rs
src/math/: mod.rs  simd_vector_ops.rs
src/monitoring/: metrics.rs  mod.rs  tracing.rs
src/optimizations/: binary_embeddings.rs  lock_free.rs  memory_pool.rs  memory_pool_tests.rs  mod.rs  simd.rs
src/pipeline/: adaptive_weights.rs  channels.rs  context_booster.rs  fusion.rs  fusion_tests.rs  intelligent_router.rs  mod.rs  pipeline.rs  preprocessor.rs  preprocessor_enhanced.rs  router.rs  search.rs  search_orchestrator.rs  storage.rs  unified_pipeline.rs
src/search/: bm25_scorer.rs  mod.rs
src/server/: mod.rs
src/types/: mod.rs
src/vectors/: dense_vector_generator.rs  mod.rs  multi_vector_coordinator.rs  sparse_vector_generator.rs  (+1 more)
tests/: README.md  embedding_accuracy_test.rs  integration_2025_test.rs  integration_test.rs  monitoring_2025_test.rs  property_tests.rs  scoring_accuracy_test.rs  test_5factor_integration.rs  test_integration.sh  test_pipeline.sh  test_skeleton.sh  uuid_system_2025_test.rs  validate_performance.sh
zero_docs/: 01_pipeline.md  02_storage_analysis.md  03_storage_fix_complete.md
(+7 files in other folders)
