[package]
name = "memory-nexus-bare"
version = "1.0.0"
edition = "2021"
rust-version = "1.82"
description = "Memory Nexus Infrastructure - Bare bones system ready for pipeline implementation"
authors = ["Memory Nexus Team"]
license = "MIT"

# ===== BUILD PROFILES =====
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
incremental = false
overflow-checks = false
debug-assertions = false

[profile.dev]
opt-level = 0
debug = 2
incremental = true

[profile.dev-fast]
inherits = "dev"
opt-level = 0
debug = 0
incremental = true
codegen-units = 256

[dependencies]
# ===== CORE RUNTIME =====
tokio = { version = "1.47", features = ["macros", "rt-multi-thread", "net", "io-util", "time", "signal"] }

# ===== DATABASE CLIENTS =====
surrealdb = { version = "2.0", features = ["protocol-ws", "protocol-http"], default-features = false }
qdrant-client = { version = "1.15", default-features = false, features = ["serde"] }

# ===== HTTP SERVER =====
axum = { version = "0.7.9", features = ["ws", "macros"] }
tower = { version = "0.5", features = ["timeout", "limit"] }
tower-http = { version = "0.6", features = ["cors", "trace", "timeout"] }

# ===== SERIALIZATION =====
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
uuid = { version = "1.11", features = ["v4", "serde"] }

# ===== ERROR HANDLING =====
thiserror = "1.0"
anyhow = "1.0.94"

# ===== ASYNC & FUTURES =====
async-trait = "0.1.83"
futures = { version = "0.3.31", default-features = false, features = ["std"] }
futures-util = "0.3.31"

# ===== NETWORKING =====
reqwest = { version = "0.12", features = ["json"], default-features = false }

# ===== UTILITIES =====
dashmap = "6.1"
once_cell = "1.21"
regex = "1.10"
chrono = { version = "0.4.39", features = ["serde"] }

# ===== RESILIENCE =====
tokio-retry = "0.3"
backoff = { version = "0.4", features = ["tokio"] }

# ===== CACHING =====
moka = { version = "0.12.8", features = ["future"] }

# ===== COMPRESSION =====
lz4_flex = "0.11.3"

# ===== LOGGING & MONITORING =====
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
metrics = "0.24"

# ===== CONFIGURATION =====
toml = { version = "0.8" }

# ===== WORKSPACE CRATES =====
database-adapters = { path = "crates/database-adapters" }
sync-engine = { path = "crates/sync-engine" }

# ===== DEVELOPMENT DEPENDENCIES =====
[dev-dependencies]
tokio-test = "0.4.4"
tempfile = "3.14"
pretty_assertions = "1.4.1"

# ===== WORKSPACE =====
[workspace]
resolver = "2"
members = [
    ".",
    "crates/database-adapters",
    "crates/sync-engine",
]

[workspace.dependencies]
# Core runtime
tokio = { version = "1.47", default-features = false }
async-trait = "0.1.83"
futures = { version = "0.3.31", default-features = false, features = ["std"] }

# Serialization
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
uuid = { version = "1.11", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0.94"

# Time
chrono = { version = "0.4.39", features = ["serde"] }

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
metrics = "0.24"

# Database clients
surrealdb = { version = "1.5", features = ["protocol-ws", "protocol-http"], default-features = false }
qdrant-client = { version = "1.15", default-features = false, features = ["serde"] }

# Networking
reqwest = { version = "0.12", features = ["json"], default-features = false }

# Utilities
dashmap = "6.1"
once_cell = "1.21"
regex = "1.10"
tokio-util = "0.7"

# Resilience
tokio-retry = "0.3"
backoff = { version = "0.4", features = ["tokio"] }

# Cache
moka = { version = "0.12.8", features = ["future"] }

# ===== BINARY TARGETS =====
[[bin]]
name = "memory-nexus-bare"
path = "src/main.rs"