[package]
name = "nexus-blocks"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "High-performance, hot-swappable pipeline blocks for Memory Nexus with zero-cost sidecar mode"
authors = ["Memory Nexus Team"]
license = "MIT"
repository = "https://github.com/memory-nexus/nexus-blocks"
readme = "README.md"

[lib]
name = "nexus_blocks"
crate-type = ["rlib", "staticlib"]  # Temporarily removed cdylib until exports.lds is configured

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

# ===== FEATURES =====
[features]
default = ["simd", "zero-copy", "metrics", "retry", "storage", "fusion"]
full = ["default", "sidecar", "standalone", "hybrid", "observability", "pgo-ready", "storage-full", "fusion-full"]

# Deployment modes
sidecar = []      # Zero-cost browser/proxy mode
standalone = []   # Full API server mode
hybrid = []       # Combined mode

# Performance features (optional - avoid conflicts with main package)
jemalloc = ["jemallocator"]
mimalloc = ["mimalloc-rust"]
simd = ["wide", "simdeez"]
zero-copy = ["rkyv", "zerocopy", "bytemuck"]
pgo-ready = []    # Profile-Guided Optimization markers

# Resilience features
retry = ["backoff", "tokio-retry"]
circuit-breaker = []
panic-recovery = []

# Observability
observability = ["opentelemetry", "opentelemetry-otlp", "tracing-opentelemetry"]
metrics = ["metrics-rs", "metrics-exporter-prometheus"]

# Storage features
storage = ["qdrant-client", "deadpool", "zstd", "bloomfilter", "sled"]
storage-full = ["storage", "memmap2"]

# Fusion features  
fusion = ["simdeez", "aligned"]
fusion-full = ["fusion", "wide"]

# ===== DEPENDENCIES =====
[dependencies]
# Link to main nexus project for wrapping existing implementations
memory-nexus = { path = "../", package = "memory-nexus-pipeline" }

# Core async runtime (optimized configuration)
tokio = { version = "1.47", features = [
    "rt-multi-thread",
    "parking_lot",      # Faster mutex implementation
    "signal",
    "sync",
    "time",
    "macros",
    "fs",
    "net",
    "io-util"
] }
async-trait = "0.1"
futures = "0.3"
pin-project = "1.1"

# Web framework (Axum preferred in 2025)
axum = { version = "0.7", features = ["ws", "macros"], optional = true }
tower = { version = "0.5", features = ["timeout", "limit", "buffer", "retry"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-br", "limit"] }
hyper = { version = "1.0", features = ["full"] }

# Error handling & resilience
thiserror = "2.0"
anyhow = "1.0"
color-eyre = "0.6"  # Better error reporting
backoff = { version = "0.4", optional = true }
tokio-retry = { version = "0.3", optional = true }

# Lock-free data structures
dashmap = "6.0"
crossbeam = { version = "0.8", features = ["crossbeam-channel", "crossbeam-queue"] }
parking_lot = "0.12"
arc-swap = "1.7"
once_cell = "1.20"

# Caching
moka = { version = "0.12", features = ["future", "sync"] }
quick_cache = "0.6"

# Serialization (zero-copy)
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
rkyv = { version = "0.7", features = ["validation", "strict"], optional = true }
zerocopy = { version = "0.8", features = ["derive"], optional = true }
bytemuck = { version = "1.16", features = ["derive"], optional = true }
bincode = "1.3"

# SIMD & Math
nalgebra = { version = "0.33", features = ["serde-serialize"] }
wide = { version = "0.7", optional = true }
simdeez = { version = "2.0.0-dev5", optional = true }
# packed_simd_2 removed - uses outdated platform_intrinsics feature

# Memory allocators
jemallocator = { version = "0.5", optional = true }
mimalloc-rust = { version = "0.1", package = "mimalloc", optional = true }

# Metrics & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics-rs = { version = "0.24", package = "metrics", optional = true }
metrics-exporter-prometheus = { version = "0.16", optional = true }

# OpenTelemetry
opentelemetry = { version = "0.27", optional = true }
opentelemetry-otlp = { version = "0.27", optional = true }
tracing-opentelemetry = { version = "0.28", optional = true }

# Utilities
uuid = { version = "1.10", features = ["v4", "fast-rng", "serde"] }
ahash = "0.8"  # Faster hasher
rustc-hash = "2.0"  # Even faster for small keys
indexmap = "2.2"
smallvec = "1.13"
bytes = "1.5"
memchr = "2.7"  # Fast byte searching for text processing
memmap2 = { version = "0.9", optional = true }  # Memory-mapped files
rayon = "1.10"  # Data parallelism
lazy_static = "1.4"
num_cpus = "1.16"
rand = "0.8"

# Time handling
chrono = { version = "0.4", features = ["serde"] }
humantime = "2.1"

# Configuration
config = "0.14"
dotenvy = "0.15"

# HTTP client (for external services)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], optional = true }

# Storage dependencies
qdrant-client = { version = "1.15", optional = true }
deadpool = { version = "0.10", optional = true }
zstd = { version = "0.13", optional = true }
bloomfilter = { version = "1.0", optional = true }
sled = { version = "0.34", optional = true }

# SIMD dependencies
aligned = { version = "0.4", optional = true }

# C ABI support
libc = "0.2"
cxx = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
proptest = "1.4"
quickcheck = "1.0"
test-case = "3.1"
pretty_assertions = "1.4"
approx = "0.5"
tempfile = "3.10"
mockall = "0.13"
fake = "2.10"

# Benchmarking
pprof = { version = "0.14", features = ["flamegraph", "criterion"] }
dhat = "0.3"  # Heap profiling

[build-dependencies]
cc = "1.0"
autocfg = "1.1"
rustc_version = "0.4"

# Profile for PGO data collection
[profile.pgo-generate]
inherits = "release"

[profile.pgo-use]
inherits = "release"

[[bench]]
name = "pipeline_blocks"
harness = false

[[bench]]
name = "simd_operations"
harness = false

[[bench]]
name = "lock_free"
harness = false

[[bench]]
name = "block_benchmarks"
harness = false